@@ -40,6 +40,7 @@ icons/gnome/gnome.xml
 icons/sierra/sierra.xml
 icons/tahoe/tahoe.xml
 libbackground/preview-file-selection.c
+nautilus/libnautilus-private/apps_nautilus_preferences.schemas.in
 libnautilus-private/filesystem-attributes.xml
 libnautilus-private/nautilus-authn-manager.c
 libnautilus-private/nautilus-customization-data.c
