@@ -1,3 +1,8 @@
+2003-04-23  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.in:
+	Add schemas.in file.	
+
 2003-04-22  Sanlig Badral  <badral@users.sf.net>
 
 	* mn.po: Updated Mongolian translation.
