@@ -1,5 +1,12 @@
 2003-04-23  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/Makefile.am:
+	* libnautilus-private/apps_nautilus_preferences.schemas:
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	Mark schema for translation.
+
+2003-04-23  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-window-menus.c (view_menu_zoom_normal_callback):
 	Do a zoom to 100%, not a best-fit.
 	Fixes bug #109413, patch by Jens Finke.
